Added assignment of Python of 2 Feb 2023 , Topic - For & While loop

--- a/loop-assignment-2Feb.ipynb
+++ b/loop-assignment-2Feb.ipynb
@@ -2,27 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "65a2368c-82ee-4894-bcf8-7f644c5b728c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "55628fa4-05d9-4d36-b321-45a60511f7c8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55 3628800\n",
-      "55 3628800\n"
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
      ]
     }
    ],
+   "source": [
+    "####Problem 1\n",
+    "## For loop can be used where the number of iterations is known to us\n",
+    "# example :- printing elements of a list individually (note :- here elements of a list is finite i.e iterations are finite)\n",
+    "l = [1,2,3,4,5]\n",
+    "for a in l:\n",
+    "    print(a)\n",
+    "## while loop can be used where the number of iterations is not known properly to us\n",
+    "# example :- printing even numbers upto a given number\n",
+    "b = 1\n",
+    "while b<=10:\n",
+    "    if b%2 == 0:\n",
+    "        print(b)\n",
+    "    b+=1\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55628fa4-05d9-4d36-b321-45a60511f7c8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#### Problem 2\n",
     "## using for loop\n",
@@ -84,12 +104,28 @@
    ],
    "source": [
     "### Problem 4 \n",
+    "#using for loop\n",
     "nl = list(range(1,101))\n",
     "l = []\n",
     "for a in nl:\n",
     "    if (a**3) % 4 == 0 or (a**3) % 5 == 0:\n",
     "        l.append(a)\n",
     "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baa492ad-8319-4804-8c7e-6f3e1e6cf4e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#using while loop\n",
+    "z = 1\n",
+    "l1 = \n",
+    "while z<=100:\n",
+    "    if (z**3) % 4 == 0 or (z**3)% 5 ==0:\n",
+    "        "
    ]
   },
   {
