Corrected some errors in the 4thFeg22-Assignment

--- a/4thFeb22-Assignment.ipynb
+++ b/4thFeb22-Assignment.ipynb
@@ -2,19 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "db867417-3054-4f0e-b075-ffda71e6173d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Virat Kohli', 24936), ('Jack Kallis', 25534), ('Ricky Ponting', 27483), ('Sachin Tendulkar', 34357)]\n"
+     ]
+    }
+   ],
    "source": [
     "#### Problem 1 - to sort the tuples in the list according to the number in it \n",
     "l = [('Sachin Tendulkar', 34357), ('Ricky Ponting', 27483), ('Jack Kallis', 25534), ('Virat Kohli', 24936)]\n",
-    "a = sorted(l,key = lambda x:x[1])"
+    "a = sorted(l,key = lambda x:x[1])\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0556089f-bf30-4b1e-acdf-c779234c6485",
    "metadata": {},
    "outputs": [
@@ -27,7 +36,7 @@
     }
    ],
    "source": [
-    "#### Problem 2 -  to return the sqares of the numbers in the list using lambda and map functions \n",
+    "#### Problem 2 -  to return the squares of the numbers in the list using lambda and map functions \n",
     "l = [1,2,3,4,5,6,7,8,9,10]\n",
     "output = list(map(lambda x:x**2,l))\n",
     "print(output)"
@@ -35,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "6297d002-fd0e-4e68-89df-aed827b8f5b6",
    "metadata": {},
    "outputs": [
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "7d60a889-af81-48e5-b346-a2f77121f870",
    "metadata": {},
    "outputs": [
@@ -78,43 +87,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "fdf5e25e-c6d5-4b8b-88fd-3923512f2d8d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2, 3, 6, 9, 27, 60, 90, 120, 46]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 6, 9, 27, 60, 90, 120, 46]\n"
+     ]
     }
    ],
    "source": [
     "#### Problem 5 -  To Filter numbers which are divisible by 2 or 3\n",
     "l2 = [2,3,6,9,27,60,90,120,55,46]\n",
-    "list(filter(lambda x:x%2==0 or x%3 ==0,l2))"
+    "res = list(filter(lambda x:x%2==0 or x%3 ==0,l2))\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "66e220c0-45fa-4e2f-9a96-526f79c3db98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['php', 'aba', 'radar', 'level']\n"
+     ]
+    }
+   ],
    "source": [
     "#### Problem 6 - to find palindromes in the given list of strings using lambda and filter function.\n",
     "l3 = ['python','php','aba','radar','level']\n",
-    "list(filter(lambda x:x == x[::-1],))"
+    "result = list(filter(lambda x:x == x[::-1],l3))\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad41faca-db45-4904-bf22-6a9ec524871b",
+   "id": "edd8e665-9d71-4b07-ad0a-ce6a04770928",
    "metadata": {},
    "outputs": [],
    "source": []
