--- a/3rdFeb22-Assignment.ipynb
+++ b/3rdFeb22-Assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2770620b-0e9e-433c-a5c5-af3c697b8095",
    "metadata": {},
    "outputs": [],
@@ -48,8 +48,12 @@
     "      and it accepts any number of key-value pairs\n",
     "      example demonstrated below\n",
     "\"\"\"\n",
-    "def dictionary(**d):\n",
-    "    return d  ## This function returns the dictionary entered as argument\n",
+    "def dictionary(**kwargs):\n",
+    "    s = {}\n",
+    "    for key,value in kwargs.items() :\n",
+    "        s[key]=value\n",
+    "    print(s)\n",
+    " ## This function returns the dictionary entered as argument\n",
     "\n",
     "        "
    ]
@@ -209,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
