--- a/4thFeb22-Assignment.ipynb
+++ b/4thFeb22-Assignment.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "6297d002-fd0e-4e68-89df-aed827b8f5b6",
    "metadata": {},
    "outputs": [
@@ -52,14 +52,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']\n"
+      "('1', '2', '3', '4', '5', '6', '7', '8', '9', '10')\n"
      ]
     }
    ],
    "source": [
-    "#### Problem 3 -  to return a list with data type string instead of int in the given list\n",
+    "#### Problem 3 -  to return a tuple with data type string instead of int in the given list\n",
     "l = [1,2,3,4,5,6,7,8,9,10]\n",
-    "result = list(map(lambda x:str(x),l))\n",
+    "result = tuple(map(lambda x:str(x),l))\n",
     "print(result)"
    ]
   },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "fdf5e25e-c6d5-4b8b-88fd-3923512f2d8d",
    "metadata": {},
    "outputs": [
@@ -95,14 +95,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 3, 6, 9, 27, 60, 90, 120, 46]\n"
+      "[6, 60, 90, 120]\n"
      ]
     }
    ],
    "source": [
-    "#### Problem 5 -  To Filter numbers which are divisible by 2 or 3\n",
+    "#### Problem 5 -  To Filter numbers which are divisible by 2 and 3\n",
     "l2 = [2,3,6,9,27,60,90,120,55,46]\n",
-    "res = list(filter(lambda x:x%2==0 or x%3 ==0,l2))\n",
+    "res = list(filter(lambda x:x%2==0 and x%3 ==0,l2))\n",
     "print(res)"
    ]
   },
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
