--- a/7thFeb22-PythonTask2.ipynb
+++ b/7thFeb22-PythonTask2.ipynb
@@ -20,7 +20,7 @@
     "            d+=1\n",
     "        elif a.isalnum() == False:\n",
     "            sp+= 1\n",
-    "    if u>=2 and l>=2 and d>=1 and sp>=3 and len(p) >= 10:\n",
+    "    if u>=2 and l>=2 and d>=1 and sp>=3 and len(p) == 10:\n",
     "        return 'Valid Password'\n",
     "    else:\n",
     "        return 'Invalid Password' \n",
