adding Data Science Rush Day 1

--- a/DataScienceRush/Day1-PythonVariables.ipynb
+++ b/DataScienceRush/Day1-PythonVariables.ipynb
@@ -401,7 +401,39 @@
    "id": "6fa4577b-df1a-4ecd-918a-3edb238364f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(bin(10) )\n",
+    "\n",
+    "print(int(0b11010))\n",
+    "\n",
+    "print(oct(12))\n",
+    "\n",
+    "print(oct(16))\n",
+    "\n",
+    "print(0o100)\n",
+    "\n",
+    "print(hex(20))\n",
+    "\n",
+    "print(hex(34))#\n",
+    "\n",
+    "print(0x100)\n",
+    "\n",
+    "\n",
+    "d = 3+4j\n",
+    "print(d.real)\n",
+    "print(d.imag)\n",
+    "\n",
+    "e = 'hello'\n",
+    "f = 9e4\n",
+    "g= 0b1011\n",
+    "h = 0o126\n",
+    "i = 0x12a\n",
+    "print(e)\n",
+    "print(f)\n",
+    "print(g)\n",
+    "print(h)\n",
+    "print(i)"
+   ]
   }
  ],
  "metadata": {
