Adding pending content of week 1 & content of week 2

--- a/DataScienceRush/Week 1 - Basics/Day1-PythonVariables.ipynb
+++ b/DataScienceRush/Week 1 - Basics/Day1-PythonVariables.ipynb
@@ -397,10 +397,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6fa4577b-df1a-4ecd-918a-3edb238364f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b1010\n",
+      "26\n",
+      "0o14\n",
+      "0o20\n",
+      "64\n",
+      "0x14\n",
+      "0x22\n",
+      "256\n",
+      "3.0\n",
+      "4.0\n",
+      "hello\n",
+      "90000.0\n",
+      "11\n",
+      "86\n",
+      "298\n"
+     ]
+    }
+   ],
    "source": [
     "print(bin(10) )\n",
     "\n",
@@ -434,6 +456,14 @@
     "print(h)\n",
     "print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6feed6d-12ad-46b1-b4ca-e4eab3409397",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
