--- a/DataScienceRush/Week 1 - Basics/Day3-TypeCasting (1).ipynb
+++ b/DataScienceRush/Week 1 - Basics/Day3-TypeCasting (1).ipynb
@@ -932,14 +932,106 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "7945730e-33c0-4c46-9039-7db38f5fb249",
+   "metadata": {},
+   "source": [
+    "## For Complex Argument:\n",
+    "if both 'a' and 'b' are 0/0.0 == false\n",
+    "otherwise == true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f334f6bd-710b-45e4-98a3-94746fcf5d68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(0+0j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "a73837d2-169d-4bae-aeb7-7fc817040417",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(0+0.0j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "73e5e1b5-4c43-4584-a934-197c6ec976ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(0.0+1j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cdae530a-e83e-4c96-8078-5a7b6c27f222",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(2+2.2j)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22927ea7-0d62-4188-b20e-5de31114ae09",
+   "id": "3e78543f-bac9-4e32-8782-2cd88a9777e0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## For Complex Argument:"
-   ]
+   "source": []
   }
  ],
  "metadata": {
