--- a/DataScienceRush/Week 1 - Basics/Day2-Basics-Continued.. (1).ipynb
+++ b/DataScienceRush/Week 1 - Basics/Day2-Basics-Continued.. (1).ipynb
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = {1,2,3,4,5,6,7,8,9}"
+    "s = {1,2,3,4,5,6,7,8,9} ## a Set"
    ]
   },
   {
