correcting some info

--- a/DataScienceRush/Week 2- Data Structures/Day1-Strings.ipynb
+++ b/DataScienceRush/Week 2- Data Structures/Day1-Strings.ipynb
@@ -12,13 +12,19 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "747d647d-73ac-4dfb-930e-ac773c58d828",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7c7c8ce-c84c-42f7-90c5-70ec7280b5b1",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "## Topic 1 - Indexing & Slicing \n",
-    "## Topic 2 - Methods - \n",
-    "                       A)Removing spaces from string:\n",
+    "\"\"\"\n",
+    "# Topic 1 - Indexing & Slicing \n",
+    "# Topic 2 - Methods - \n",
+    "                      A)Removing spaces from string:\n",
     "                              1) strip(): removes spaces from both the side of the string.\n",
     "                              2) lstrip(): removes spaces from Left side of the string.\n",
     "                              3) rstrip()removes spaces from Left side of the string.\n",
@@ -36,23 +42,23 @@
     "                             rfind(): Returns the beginning index of the first occurrence from of the given substring. If substringnot found returns -1.\n",
     "                             findex() is exactly same as find, if substring not found will raise ValueError: substring not found\n",
     "                            \n",
-    "                       C) Counting Substring of a given string:\n",
+    "                      C) Counting Substring of a given string:\n",
     "                            1) count(substring):\n",
     "                            2) count(substring, Begin, End)\n",
     "                        \n",
-    "                       D) Replacing a substring:\n",
+    "                      D) Replacing a substring:\n",
     "                            1) replace(oldString, newString)\n",
     "                            2) replace(oldString, newString, max)\n",
     "                            \n",
-    "                       E) Splitting String: \n",
+    "                      E) Splitting String: \n",
     "                            1) split(Seprator): is used to split a string into substring and returns the list of substring.\n",
     "                            Default Separator = ‘ ’ space character. But we can use any separator, need to be in string.\n",
     "                            \n",
-    "                       F) join(): is used to join string elements of iterable object and returns a string. \n",
+    "                      F) join(): is used to join string elements of iterable object and returns a string. \n",
     "                          If the elements are of any other type than join() raise error.\n",
     "                          Syntax: ‘’.join(iterableobject)\n",
     "                        \n",
-    "                       G) Changing Cases in String:\n",
+    "                      G) Changing Cases in String:\n",
     "                       \n",
     "                           1) upper(): is used to convert all thecharacters into upper case.\n",
     "                           2) lower(): to convert into lowercase.\n",
@@ -68,14 +74,16 @@
     "                           5) isupper(): returns True if the string is in upper case\n",
     "                           6) istitle(): returns True if the string is in title case\n",
     "                           7) isspace(): returns True if the string contains only spaces\n",
-    "                            \n",
+    "          \"\"\"                  \n",
     "                       "
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c3b6e745-11eb-4251-9678-51ac1dbd6045",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c845825-5650-45da-a913-8a67b4700132",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Indexing - to get the element at a particular index \n",
     "# Slicing - A slice / Piece of Something"
@@ -269,15 +277,20 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1e4dd582-0a37-4b3e-b8fb-f2a902809209",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc0757d3-e1ab-4f78-ab4b-057fc2129ff8",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "1)Removing spaces from string:\n",
     "\n",
     "1) strip(): removes spaces from both the side of the string.\n",
     "2) lstrip(): removes spaces from Left side of the string.\n",
-    "3) rstrip()removes spaces from Left side of the string."
+    "3) rstrip()removes spaces from Left side of the string.\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -324,10 +337,22 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ee496166-f5f7-4f68-accb-4e5a4a3a1ae0",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7517c977-4393-49d3-a776-d65322f65ca5",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (3473910273.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    2) Finding Substring:\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "2) Finding Substring:\n",
     "\n",
     "Forward Direction\n",
