--- a/DataScienceRush/Week 2- Data Structures/Day2-List.ipynb
+++ b/DataScienceRush/Week 2- Data Structures/Day2-List.ipynb
@@ -12,10 +12,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "48b38827-6511-4bec-9da9-264c560d10a5",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aa25e1b-0007-4c5d-bffb-5278611579bf",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# Topic 1 - Intorduction \n",
     "# Topic 2 - Creation of List Objects- [] , split() , list() \n",
     "# Topic 3 - Accessing elements of List - Indexing & Slicing \n",
@@ -74,26 +77,30 @@
     "                             List Comprehension: Is an easy and compact way of creating list objects form iterableobjects.\n",
     "                             Syntax: List = [ item for item in iterable_object if condition (optional) ]\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "                         "
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "71fbcf0d-377b-45c8-936a-97f36d03ca63",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "647d2906-52c9-4c6d-8d77-df924e3d2780",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "List - Lists is a collection of heterogenous element.\n",
     "Insertion Order is Preserved.\n",
     "Duplicates are allowed.\n",
     "Indexing & slicing applicable. \n",
     "Mutable.\n",
-    "[] are used to define list object."
+    "[] are used to define list object.\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5fdc3669-a9b8-4250-8e80-3c6f7b82c799",
    "metadata": {},
    "outputs": [],
