--- a/DataScienceRush/Week 2- Data Structures/Day3-Tuple.ipynb
+++ b/DataScienceRush/Week 2- Data Structures/Day3-Tuple.ipynb
@@ -12,10 +12,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "9498494a-e433-4c4a-ad28-517619df1676",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9596348-1fca-4181-9c3e-138db4c15639",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# Topic 1 - Introduction \n",
     "# Topic 2 - Creation of Tuple Object \n",
     "# Topic 3 - Important Methods & Functions \n",
@@ -30,21 +33,26 @@
     "                    Packing: multiple objects are packed into one single object.\n",
     "                    Unpacking: it just reverse of packing\n",
     "        \n",
-    "# Topic 5 - Tuple Comprehsnions "
+    "# Topic 5 - Tuple Comprehsnions \n",
+    "\"\"\""
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d56238f0-17ef-4012-b1d4-dde426ef6006",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc6cdb12-b7b2-433f-8cb7-17bbeadbe49d",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "- Tuple Is a collection of heterogeneous elements.\n",
     "- Immutable\n",
     "= Insertion Order Preserved\n",
     "- Indexing and slicing applicable\n",
     "- Duplicate are allowed.\n",
     "- Read only copy list.\n",
-    "( ) parenthesis are used to define tuple object, but it is optional. Parenthesis are optional but recommended to use."
+    "( ) parenthesis are used to define tuple object, but it is optional. Parenthesis are optional but recommended to use.\n",
+    "\"\"\""
    ]
   },
   {
@@ -308,13 +316,17 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d7a2e93f-a785-4579-9c1b-7fb438de43ab",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e923649-987a-4a23-8d31-afc17c1ce2d0",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "## Tuples Comprehensions \n",
     "Tuple comprehension not supported by python.\n",
-    "Tuple Comprehensions creates generator objects "
+    "Tuple Comprehensions creates generator objects \n",
+    "\"\"\""
    ]
   },
   {
