--- a/DataScienceRush/Week 2- Data Structures/Day4-Sets.ipynb
+++ b/DataScienceRush/Week 2- Data Structures/Day4-Sets.ipynb
@@ -12,10 +12,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "014a87c6-6386-420a-82b8-2f64fac5b780",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4786e47-fc01-495b-9e9f-c18b45758db8",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# Topic 1 - Intoduction \n",
     "# Topic 2 - Creation of Set Object - {} , set()\n",
     "# Topic 3 - Important Methods \n",
@@ -32,21 +35,25 @@
     "            3) difference():a.difference(b) OR a-b: will return elements of ‘a’ not in ‘b’.\n",
     "            4) symmetric_difference(): x.symmetric_difference(y) OR x^y: Returns non common elements of both ‘x’ and ‘y’.\n",
     "\n",
-    "# Topic 5 - Set Comprehension "
+    "# Topic 5 - Set Comprehension \n",
+    "\"\"\""
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "3b22a62f-8af3-45bd-8c8b-2ae4d7bd692a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a5ed3c6-891e-411d-b306-a003619b7cb0",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "Set Datatype:\n",
     "Set is unique collection of heterogenous element.\n",
     "Insertion order not preserved.\n",
     "Duplicates not allowed.\n",
     "Mutable.\n",
     "Indexing and slicing not applicable.\n",
-    "{ } brackets are used to define set object."
+    "{ } brackets are used to define set object.\"\"\""
    ]
   },
   {
