--- a/DataScienceRush/Week 2- Data Structures/Day5-Dictionaries.ipynb
+++ b/DataScienceRush/Week 2- Data Structures/Day5-Dictionaries.ipynb
@@ -12,10 +12,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "48ee085e-8d92-4d9b-84ec-01cff99a340f",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4902868-96b7-4c64-a38c-fadf01eabb52",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# Topic 1 - Introduction \n",
     "# Topic 2 - Creation of Dict. Object - {} , dict() , zip()\n",
     "# Topic 3 - accesing values , updating values , inserting key-value pair , deleting key-value pair\n",
@@ -34,21 +37,26 @@
     "               8) Values(): will return all the values of the dictionary.\n",
     "               9) items(): returns list of tuple representing key-value pair.\n",
     "              10) setdefault(k,v): is used to add key value pair to the dictionary. If key exists it will return the\n",
-    "                  corresponding value. Otherwise will add a key-value pair to the dictionary also returns the value."
+    "                  corresponding value. Otherwise will add a key-value pair to the dictionary also returns the value.\n",
+    "                  \"\"\""
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "dea1b52f-951f-4d79-93b1-77a83fe5fb22",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a64a3c6a-53c5-497c-8d34-8b900700362e",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "- Dict (Dictionary): is a group of key-value pair.\n",
     "- Collection of heterogeneous (keys and values )elements.\n",
     "- Insertion Order not preserved\n",
     "- Slicing and indexing not allowed\n",
     "- Mutable.\n",
     "- Values can be duplicated but keys cannot be.\n",
-    "- If we are trying to insert a duplicate key-value pair old value will be replaced with new value."
+    "- If we are trying to insert a duplicate key-value pair old value will be replaced with new value.\n",
+    "\"\"\""
    ]
   },
   {
