--- a/DataScienceRush/Week 2- Data Structures/Week2-Assignment.ipynb
+++ b/DataScienceRush/Week 2- Data Structures/Week2-Assignment.ipynb
@@ -12,23 +12,29 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "2290b02d-e1ff-49b8-a9b6-bf89b1e02aed",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f5c3b6e-6ebb-46a2-9f02-784534ff8bf8",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q1. How do you comment code in Python? What are the different types of comments?"
+    "\"\"\"Q1. How do you comment code in Python? What are the different types of comments?\"\"\""
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8ca1e2bd-fbf2-497a-aa7a-0246a6d61816",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "999be093-e5d0-407a-89b9-3b137bd08e98",
    "metadata": {},
+   "outputs": [],
    "source": [
+    "\"\"\"\n",
     "Comment in Python are written with a hash (#) in starting \n",
     "Two types of comments :- \n",
     "                        1) Single Line Comment\n",
     "                        2) Multi-Line Comment\n",
-    "examples are given below :- "
+    "examples are given below :- \n",
+    "\"\"\""
    ]
   },
   {
@@ -56,11 +62,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b70f52f0-2edd-409e-b074-379693029433",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4184bd81-8bc7-441b-a468-6a930085e50e",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q2. What are variables in Python? How do you declare and assign values to variables?"
+    "\"\"\"Q2. What are variables in Python? How do you declare and assign values to variables?\"\"\""
    ]
   },
   {
@@ -76,11 +84,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "110fce76-71d3-4b81-ba80-f63352a05b1c",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fadbe75-4100-47d5-ae50-b5559077c316",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q3. How do you convert one data type to another in Python?"
+    "\"\"\"Q3. How do you convert one data type to another in Python?\"\"\""
    ]
   },
   {
@@ -108,28 +118,34 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4e6f7821-2d28-4612-9d83-5b7bd4eff803",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad1718ea-acb9-4409-a55b-8810b1b019d5",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q4. How do you write and execute a Python script from the command line?"
+    "\"\"\"Q4. How do you write and execute a Python script from the command line?\"\"\""
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d785d594-d64a-48c3-a5d4-df4cacbe8000",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b824a48-f165-4326-8569-312bca1fc526",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "We need to open a command line and type the word python followed by the path to your script file like this: \n",
-    "python first_script.py"
+    "\"\"\"We need to open a command line and type the word python followed by the path to your script file like this: \n",
+    "python first_script.py\"\"\""
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ffe10391-20b5-4104-9a28-f5ecbadd8086",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c8de0b3-cc56-4b7c-a886-6ff3137149e1",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q5. Given a list my_list = [1, 2, 3, 4, 5], write the code to slice the list and obtain the sub-list [2, 3]."
+    "\"\"\"Q5. Given a list my_list = [1, 2, 3, 4, 5], write the code to slice the list and obtain the sub-list [2, 3].\"\"\""
    ]
   },
   {
@@ -155,11 +171,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1f7b8cec-2f0f-4279-9a4f-b192408ddfa0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb7a0cb1-a229-4b3a-9d0d-40b345939873",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q6. What is a complex number in mathematics, and how is it represented in Python?"
+    "\"\"\"Q6. What is a complex number in mathematics, and how is it represented in Python?\"\"\""
    ]
   },
   {
@@ -187,11 +205,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "de205dce-4989-4fef-a8cc-9737163f2b96",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fc0bfe6-64b4-457a-987e-d04e9ffab038",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q7. What is the correct way to declare a variable named age and assign the value 25 to it?"
+    "\"\"\"Q7. What is the correct way to declare a variable named age and assign the value 25 to it?\"\"\""
    ]
   },
   {
@@ -214,12 +234,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "39012c9f-b4dc-4658-a8d5-092300a0f4f6",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a25cf74b-07a7-4bb3-8fdf-232eebf444bd",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q8. Declare a variable named price and assign the value 9.99 to it. What data type does this variable\n",
-    "belong to?"
+    "\"\"\"Q8. Declare a variable named price and assign the value 9.99 to it. What data type does this variable\n",
+    "belong to?\"\"\""
    ]
   },
   {
@@ -246,12 +268,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b2af6ee1-fd61-4c72-881a-097700ed0519",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "979bb060-161b-446b-885a-4ec316f69cf2",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q9. Create a variable named name and assign your full name to it as a string. How would you print the\n",
-    "value of this variable?"
+    "\"\"\"Q9. Create a variable named name and assign your full name to it as a string. How would you print the\n",
+    "value of this variable?\"\"\""
    ]
   },
   {
@@ -274,11 +298,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "45165f27-edc2-4a8f-a2b4-e2b9b3c705a5",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d70839fb-995d-41a1-a61a-701a4fe5465c",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q10. Given the string \"Hello, World!\", extract the substring \"World\"."
+    "\"\"\"Q10. Given the string \"Hello, World!\", extract the substring \"World\".\"\"\""
    ]
   },
   {
@@ -304,12 +330,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a59186be-b654-432f-a541-0c89fd527eed",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77be8a29-e42a-41ec-8ca8-7873457d6c17",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Q11. Create a variable named \"is_student\" and assign it a boolean value indicating whether you are\n",
-    "currently a student or not."
+    "\"\"\"Q11. Create a variable named \"is_student\" and assign it a boolean value indicating whether you are\n",
+    "currently a student or not.\"\"\""
    ]
   },
   {
